# diffgentor

./: .gitmodules  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
diffgentor/: __init__.py  __main__.py  config.py
diffgentor/backends/: __init__.py  base.py  lora_mixin.py  registry.py
diffgentor/backends/editing/: __init__.py  bagel.py  deepgen.py  diffusers_editing.py  dreamomni2.py  emu35.py  flux_kontext.py  google_genai_editing.py  hunyuan_image_3.py  openai_editing.py  registry.py  step1x.py
diffgentor/backends/editing/strategies/: __init__.py  base.py  implementations.py  registry.py
diffgentor/backends/t2i/: __init__.py  deepgen.py  diffusers_backend.py  google_genai_backend.py  openai_backend.py  xdit_backend.py
diffgentor/cli/: __init__.py  main.py
diffgentor/launcher/: __init__.py  launcher.py
diffgentor/models/: __init__.py
diffgentor/models/deepgen/: __init__.py  model.py  pipeline_stable_diffusion_3_dynamic.py  transformer_sd3_dynamic.py
diffgentor/models/deepgen/config/: __init__.py  deepgen.py
diffgentor/models/deepgen/connector/: __init__.py  configuration_connector.py  modeling_connector.py
diffgentor/models/deepgen_v1/: __init__.py  modeling.py  pipeline.py  transformer.py
diffgentor/models/deepgen_v1/configs/: __init__.py  deepgen_v1.py
diffgentor/models/deepgen_v1/connector/: __init__.py  configuration.py  modeling.py
diffgentor/optimizations/: __init__.py  base.py  manager.py  optimizers.py
diffgentor/prompt_enhance/: __init__.py  base.py  flux2.py  glm_image.py  qwen_image_edit.py  registry.py
diffgentor/serve/: __init__.py  app.py  routes.py  schemas.py  worker_pool.py
diffgentor/utils/: __init__.py  api_pool.py  data.py  distributed.py  env.py  exceptions.py  image.py  logging.py  task_distribution.py
diffgentor/workers/: __init__.py  base.py  edit_worker.py  t2i_worker.py
docs/: env_vars.md  optimization.md  prompt_enhance.md  serve.md
docs/editing/: README.md  bagel.md  deepgen.md  diffusers.md  dreamomni2.md  emu35.md  flux_kontext.md  google_genai.md  hunyuan_image_3.md  openai.md  step1x.md
docs/optimization/: README.md  batch_inference.md  memory.md  multi_gpu.md  speed.md
docs/t2i/: README.md  deepgen.md  google_genai.md
