[project]
name = "diffgentor"
version = "0.1.0"
description = "A unified visual generation data synthesis factory supporting multiple backends (diffusers, xDiT, OpenAI API)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = "==3.10.*"
authors = [{ name = "diffgentor team" }]
keywords = ["diffusion", "image-generation", "image-editing", "text-to-image"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "diffusers",
    "transformers==4.57.3",
    "tokenizers==0.22.1",
    "datasets==4.4.1",
    "huggingface-hub==0.36.0",
]

[project.optional-dependencies]
flash-attn = ["flash-attn"]
xdit = ["xfuser"]
openai = ["openai"]
xformers = ["xformers"]
deepcache = ["DeepCache"]
cache-dit = ["cache-dit"]
para-attn = ["para-attn"]
quantization = ["torchao", "bitsandbytes"]
google-genai = ["google-genai"]
step1x = ["qwen-vl-utils", "liger_kernel", "distvae", "xfuser"]
bagel = ["safetensors", "opencv-python-headless", "sentencepiece==0.2.1"]
emu35 = ["omegaconf", "tiktoken"]
dreamomni2 = ["protobuf", "peft"]
all = [
    "diffgentor[xdit,openai,xformers,deepcache,cache-dit,para-attn,quantization,google-genai,step1x,bagel,emu35,dreamomni2]",
]
dev = ["pytest", "black", "ruff", "mypy"]

[project.scripts]
diffgentor = "diffgentor.cli:main"

[project.urls]
Homepage = "https://github.com/diffgentor/diffgentor-light"
Documentation = "https://github.com/diffgentor/diffgentor-light#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diffgentor"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.uv]
# Use PyTorch cu126 index for torch packages
extra-index-url = ["https://download.pytorch.org/whl/cu126"]

[tool.uv.sources]
# diffusers from GitHub main branch
diffusers = { git = "https://github.com/huggingface/diffusers", rev = "d0c54e5563c3245b57d2b374e8e334da77305c05" }
# Flash Attention from GitHub release
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiFALSE-cp310-cp310-linux_x86_64.whl" }
